updated order of the cards using custom grid logic. fixed padding so the CTA hero section doesnnt have too much padding top.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -133,6 +133,10 @@ body {
         padding-top: 255px;
     }
 
+    .hero-section.call-to-action-section {
+        padding-top: 60px;
+    }
+
     .hero-section::before {
         height: 120%;
     }
@@ -587,4 +591,95 @@ ul.party-package > li:not(:first-child) {
 .contact-form-section .btn-primary:hover {
     background-color: #ffcccb;
     border-color: #ffcccb;
+}
+
+
+/** packages Grid styles **/
+
+.non-bs-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 10px;
+}
+
+.first-row {
+    grid-column: 1 / 2; 
+    grid-row: 1;
+    padding: 0px 12px; 
+}
+
+.fourth-row {
+    grid-column: 1 / 2; 
+    grid-row: 2; 
+    padding: 0px 12px;
+}
+
+.second-row { 
+    grid-column: 2 / 3; 
+    grid-row: 1 / 3; 
+    padding: 0px 12px;
+}
+
+.third-row { 
+    grid-column: 3; 
+    grid-row: 1 / 3; 
+    padding: 0px 12px;
+}
+
+@media (max-width: 576px) {
+
+    .non-bs-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .first-row { 
+        grid-column: 1; 
+        grid-row: 1; 
+    }
+
+    .second-row { 
+        grid-column: 1; 
+        grid-row: 2; 
+    }
+    .third-row { 
+        grid-column: 1; 
+        grid-row: 3; 
+    }
+
+    .fourth-row { 
+        grid-column: 1; 
+        grid-row: 4; 
+    }
+}
+
+
+@media (min-width: 577px) and (max-width: 991px) {
+    .non-bs-container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+    }
+
+    .first-row { 
+        grid-column: 1 / span 2; 
+        grid-row: 1; 
+    }
+
+    .second-row { 
+        grid-column: 1; 
+        grid-row: 2; 
+    }
+    .third-row { 
+        grid-column: 2; 
+        grid-row: 2; 
+    }
+
+    .fourth-row { 
+        grid-column: 1 / span 2; 
+        grid-row: 3; 
+    }
 }
